clusters/k3s/home-automation/mosquitto.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
spec:
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.0
          resources:
            requests:
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 1883
              name: mqtt
            - containerPort: 9001
              name: ws
          volumeMounts:
            - name: mosquitto-config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
      volumes:
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
