clusters/k3s/home-automation/mosquitto.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
  - name: mqtt
    port: 1883
    targetPort: mqtt
  - name: ws
    port: 9001
    targetPort: ws
